UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/Pricing_Formula_Var__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Pricing Formula Variable</label>
</CustomObject>