UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>24</length>
    <type>Text</type>
</CustomField>