UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/fields/Eval_Class__c.field-meta.xml
<CustomField>
    <fullName>Eval_Class__c</fullName>
    <label>Eval Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>