UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/fields/Eval_Method__c.field-meta.xml
<CustomField>
    <fullName>Eval_Method__c</fullName>
    <label>Eval Method</label>
    <length>64</length>
    <type>Text</type>
</CustomField>