UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The field API name on the Pricing Formula Definition Table</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>