UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/fields/Picklist_Ref__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Ref__c</fullName>
    <description>The Picklist defined in the Vlocity EPC</description>
    <label>Picklist Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>