UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Var__c/listViews/All_Variables.listView-meta.xml
<ListView>
    <fullName>All_Variables</fullName>
    <columns>NAME</columns>
    <columns>Data_Type__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Picklist_Ref__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Variables</label>
</ListView>